--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+1.1 - (Unreleased)
+------------------
+
 1.0 -(2010-07-01)
 -----------------
  * Initial release based on code from eea.dataservice [tiberich]
