--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 1.2 - (unreleased)
 ------------------
+ * Feature: Messages now display title of the workflow state
+     instead of its id [ghicaale #3576]
  * Feature: Versions listing colored based on review_state [ghicaale #3576]
  * Bug fix: Do not display versions in 'public draft' for anonymous [ghicaale #3576]
 
