--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 [Alexandru Ghica - alec.ghica@eaudeweb.ro]
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
+1.3 - (unreleased)
+------------------
+
 1.2 - (2010-09-06)
 ------------------
  * Feature: Messages now display title of the workflow state
