--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,8 +3,11 @@ Changelog
 [Alexandru Ghica - alec.ghica@eaudeweb.ro]
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
-1.3 - (unreleased)
+1.4 - (unreleased)
 ------------------
+
+1.4-dev - (2010-09-17)
+----------------------
  * Bug fix: fixed getting workflow state title [ghicaale]
 
 1.2 - (2010-09-06)
@@ -22,3 +25,4 @@ Changelog
 1.0 -(2010-07-01)
 -----------------
  * Initial release, based on code from eea.dataservice [tiberich]
+
