--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,10 +3,7 @@ Changelog
 [Alexandru Ghica - alec.ghica@eaudeweb.ro]
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
-1.4 - (unreleased)
-------------------
-
-1.4-dev - (2010-09-17)
+1.3-dev - (unreleased)
 ----------------------
  * Bug fix: fixed getting workflow state title [ghicaale]
 
