Change version to devel

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 [Alexandru Ghica - alec.ghica@eaudeweb.ro]
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
+1.4 - (unreleased)
+------------------
+
 1.4-dev - (2010-09-17)
 ----------------------
  * Bug fix: fixed getting workflow state title [ghicaale]
