--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,8 +3,8 @@ Changelog
 [Alexandru Ghica - alec.ghica@eaudeweb.ro]
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
-1.4 - (unreleased)
-------------------
+1.4-dev - (unreleased)
+----------------------
  * Feature: Delete comments when creating a new version [ghicaale #3601]
 
 1.4-dev - (2010-09-17)
