--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 [Alexandru Ghica - alec.ghica@eaudeweb.ro]
 [Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]
 
+1.5-dev - (unreleased)
+----------------------
+
 1.4 - (2010-09-30)
 ------------------
  * Feature: Delete comments when creating a new version [ghicaale #3601]
