--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,13 +5,14 @@ Changelog
 
 1.5-dev - (unreleased)
 ----------------------
+ * Add a nextURL parameter in the @@assign_version view [tiberich #3650]
 
 1.4 - (2010-09-30)
 ------------------
  * Feature: Delete comments when creating a new version [ghicaale #3601]
 
 1.3 - (2010-09-17)
-----------------------
+------------------
  * Bug fix: fixed getting workflow state title [ghicaale]
 
 1.2 - (2010-09-06)
@@ -26,7 +27,7 @@ Changelog
  * Feature: If there is no EffectiveDate, version number is computed
      based on CreationDate [ghicaale #3506]
 
-1.0 -(2010-07-01)
------------------
+1.0 - (2010-07-01)
+------------------
  * Initial release, based on code from eea.dataservice [tiberich]
 
