--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,7 @@ Changelog
 
 1.8-dev - (unreleased)
 ----------------------
+ * API Change: renamed has_versions to isVersionEnhanced, also coresponding view [tiberich #3278]
 
 1.7 - (2010-10-29)
 ------------------
