--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,8 @@ Changelog
 
 1.9-dev - (unreleased)
 ----------------------
+ * Change: replace manage_pasteObjects with customized version that doesn't notify
+   of changes, so as to not trigger reindexing that much [tiberich #3973]
 
 1.8 - (2010-10-29)
 ------------------
