--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,8 @@ Changelog
 
 1.10-dev - (unreleased)
 -----------------------
+ * Cleanup: of pyflakes warnings [ichimdav #4141]
+ * Cleanup: of pylint violations [ichimdav #4140]
 
 1.9 - (2011-02-01)
 ------------------
