--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,7 @@ Changelog
 
 1.10-dev - (unreleased)
 -----------------------
+ * Bug fix: omitted the change of object to obj which broke the version portlet [ichimdav]
  * Cleanup: of pyflakes warnings [ichimdav #4141]
  * Cleanup: of pylint violations [ichimdav #4140]
 
