--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,8 @@ Changelog
 
 4.0-dev - (unreleased)
 ----------------------
+* Bugfix: fixed "Permalink to latest version" in case if only one entry is available
+  [szabozo #4630]
 
 * Feature: added a utility view, @@get_interfaces
   [tiberich #4275]
