--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,7 @@ Changelog
 
 4.3-dev - (unreleased)
 ----------------------
+* Feature: added method for checking if context object is latest [demarant]
 
 4.2 - (2011-11-22)
 ------------------
