Refs #5020; check if ver.talkback is None to avoid crash

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,7 @@ Changelog
 
 4.4-dev - (unreleased)
 ----------------------
+ * Bug fix: check if ver.talkback is None to avoid crash [tiberich #5020]
 
 4.3 - (2012-02-15)
 ------------------
