--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,8 +4,11 @@ Changelog
 4.4-dev - (unreleased)
 ----------------------
  * Bug fix: check if ver.talkback is None to avoid crash [tiberich #5020]
- * Bug fix: don't allow background creation of versions for assessments
-   [tiberich #5020]
+ * Bug fix: don't start an uncontrolled number of timeouts in javascript
+   versions popup [tiberich #5020]
+ * Bug fix: moved createVersionAjax to its own class; use @@createVersion
+   view to do the versioning. This allows packages to override version
+   creation [tiberich #5020]
 
 4.3 - (2012-02-15)
 ------------------
