--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.5-dev - (unreleased)
+----------------------
+
 4.4 - (2012-03-30)
 ------------------
  * Bug fix: check if ver.talkback is None to avoid crash [tiberich #5020]
