Refs #5111; no longer depend on collective.indexing

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,7 @@ Changelog
 
 4.5-dev - (unreleased)
 ----------------------
+ * Bug fix: no longer depend on collective.indexing [tiberich #5111]
 
 4.4 - (2012-03-30)
 ------------------
