--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.6-dev - (unreleased)
+----------------------
+
 4.5 - (2012-05-03)
 ------------------
  * Bug fix: no longer depend on collective.indexing [tiberich #5111]
