--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,27 +3,36 @@ Changelog
 
 4.6-dev - (unreleased)
 ----------------------
- * Feature: updated for plone.app.discussion 2.0.10 [szabozo0 #5189]
- * Bug fix: fix pylint warnings [tiberich #5111]
+* Bug fix: fixed markup of HISTORY.txt file
+  [ciobabog refs #5231]
+* Feature: updated for plone.app.discussion 2.0.10
+  [szabozo0 #5189]
+* Bug fix: fix pylint warnings
+  [tiberich #5111]
 
 4.5 - (2012-05-03)
 ------------------
- * Bug fix: no longer depend on collective.indexing [tiberich #5111]
+* Bug fix: no longer depend on collective.indexing
+  [tiberich #5111]
 
 4.4 - (2012-03-30)
 ------------------
- * Bug fix: check if ver.talkback is None to avoid crash [tiberich #5020]
- * Bug fix: don't start an uncontrolled number of timeouts in javascript
-   versions popup [tiberich #5020]
- * Bug fix: moved createVersionAjax to its own class; use @@createVersion
-   view to do the versioning. This allows packages to override version
-   creation [tiberich #5020]
- * Feature: added test to see if using collective.indexing is faster [tiberich
-   #5033]
+* Bug fix: check if ver.talkback is None to avoid crash
+  [tiberich #5020]
+* Bug fix: don't start an uncontrolled number of timeouts in javascript
+  versions popup
+  [tiberich #5020]
+* Bug fix: moved createVersionAjax to its own class; use @@createVersion
+  view to do the versioning. This allows packages to override version
+  creation
+  [tiberich #5020]
+* Feature: added test to see if using collective.indexing is faster
+  [tiberich #5033]
 
 4.3 - (2012-02-15)
 ------------------
-* Feature: added method for checking if context object is latest [demarant]
+* Feature: added method for checking if context object is latest
+  [demarant]
 
 4.2 - (2011-11-22)
 ------------------
