--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,7 @@ Changelog
 
 4.7-dev - (unreleased)
 ----------------------
+* 
 
 4.6 - (2012-06-12)
 ------------------
@@ -12,6 +13,9 @@ Changelog
   [szabozo0 #5189]
 * Bug fix: fix pylint warnings
   [tiberich #5111]
+* Bug Fix: Fixed duplicate key for translation in *.pt
+  [prospchr refs #5162]
+  
 
 4.5 - (2012-05-03)
 ------------------
