Updated version for eea.versions to 5.1-dev

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+5.1-dev - (unreleased)
+----------------------
+
 5.0 - (2012-10-08)
 ------------------
 * Bug fix: added a page to detect and fix objects that have a recorded
