--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 5.1-dev - (unreleased)
 ----------------------
+* Feature: Added i18n translations
+  [avoinea]
 * Bug fix: don't fail if reindex fails for children of copied (versioned)
   objects. They will be reindexed anyway in a later step
   [tiberich #9946]
