--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+5.2-dev - (unreleased)
+----------------------
+
 5.1 - (2012-11-09)
 ------------------
 * Feature: Added i18n translations
