--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 5.2-dev - (unreleased)
 ----------------------
+* Bug fix: make revoke action hidden by default
+  [tiberich]
 
 5.1 - (2012-11-09)
 ------------------
