--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 5.4-dev - (unreleased)
 ----------------------
+* Bug fix: avoid page reload when clicking on previous version
+  [ichimdav #10182]
 
 5.3 - (2012-11-27)
 ------------------
