Updated version for eea.versions to 5.5-dev

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+5.5-dev - (unreleased)
+----------------------
+
 5.4 - (2013-01-10)
 ------------------
 * Change: hide older version listing by default, listing can be seen by  
