--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 5.5-dev - (unreleased)
 ----------------------
+* Bug fix: don't strip obj of aquisition context when deleting conversation,
+  avoids possible reindexing errors
+  [tiberich #13836]
 
 5.4 - (2013-01-10)
 ------------------
