--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 5.6-dev - (unreleased)
 ----------------------
+* Bug fix: improve message show in portlet versions about the latest version
+  [tiberich #14050]
 
 5.5 - (2013-02-25)
 ------------------
