--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+5.7-dev - (unreleased)
+----------------------
+
 5.6 - (2013-04-17)
 ------------------
 * Bug fix: improve message show in portlet versions about the latest version
