Refs #14008; make sure to always include self.context in IGetVersions.versions(); this avoids situations when object is having an attribute indexed that depends on versionId and failing to find any versions because this object is the first in its version group

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 5.7-dev - (unreleased)
 ----------------------
+* Change: refactor the versioning to simplify code and make it easier to use
+  [tiberich #14008]
 
 5.6 - (2013-04-17)
 ------------------
