--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 ----------------------
 * Change: refactor the versioning to simplify code and make it easier to use
   [tiberich #14008]
+* Upgrade step: go to portal_setup, Upgrades, choose eea.versions:default, 
+  execute upgrade step 
+  [tiberich #14361]
 
 5.6 - (2013-04-17)
 ------------------
