Refs #14361; added can_version view and functionality to IVersionControl in eea.versions

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 5.7-dev - (unreleased)
 ----------------------
+* Feature: added IVersionControl.can_create_new_version and
+  @@can_create_new_version view as the basis of a mechanism to disable creation of 
+  new versions
 * Change: refactor the versioning to simplify code and make it easier to use.
   Added and improved tests.
   [tiberich #14008]
