--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 5.9-dev - (unreleased)
 ----------------------
+* Bug fix: fix getLatestVersionUrl, it needs to be a separate view
+  [tiberich #14568]
 
 5.8 - (2013-05-20)
 ------------------
