--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.0-dev - (unreleased)
+----------------------
+
 5.9 - (2013-05-21)
 ------------------
 * Bug fix: fix getLatestVersionUrl, it needs to be a separate view
