--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 6.0-dev - (unreleased)
 ----------------------
+* Bug fix: fix bug caused by missing proper security wrapper in init of a view
+  [tiberich #14568]
 
 5.9 - (2013-05-21)
 ------------------
