--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.1-dev - (unreleased)
+----------------------
+
 6.0 - (2013-05-21)
 ------------------
 * Bug fix: fix bug caused by missing proper security wrapper in init of a view
