--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.2-dev - (unreleased)
+----------------------
+
 6.1 - (2013-08-09)
 ------------------
 * Change: when a newer version is present, only show the latest version in the 
