Refs #16641 EEA; use POST instead of GET when making an AJAX call to create a new version

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 6.2-dev - (unreleased)
 ----------------------
+* Bug fix: use POST instead of GET when creating a new version
+  [tiberich #16641]
 
 6.1 - (2013-08-09)
 ------------------
