--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 6.3-dev - (unreleased)
 ----------------------
+* Bug fix: Removed endless loop while generating random_id
+  [voineali refs #16723]
 
 6.2 - (2013-09-06)
 ------------------
