--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -6,6 +6,8 @@ Changelog
 * Bug fix: Fixed inconsistent information message regarding assessment state for
   anonymous users.
   [tiberich #14613]
+* Bug fix: don't calculate versions if versionId is empty
+  [tiberich #16751]
 * Bug fix: Removed endless loop while generating random_id
   [voineali refs #16723]
 
