--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.4-dev - (unreleased)
+----------------------
+
 6.3 - (2013-09-17)
 ------------------
 * Bug fix: Fixed inconsistent information message regarding assessment state for
