--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 6.7-dev - (unreleased)
 ----------------------
+* Feature: adding Sphinx-generated documentation in Page Template format
+  [batradav refs #9502]
 
 6.6 - (2013-12-05)
 ------------------
