--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.9-dev - (unreleased)
+----------------------
+
 6.8 - (2014-01-23)
 ------------------
 * Feature: added test which documents the way versions are returned when
