Updated version for eea.versions to 7.0-dev

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+7.0-dev - (unreleased)
+----------------------
+
 6.9 - (2014-03-10)
 ------------------
 * Change: getLatestVersionUrl can now be called from the getLatestVersionUrl
