--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+7.1-dev - (unreleased)
+----------------------
+
 7.0 - (2014-05-13)
 ------------------
 * Change: fixed pylint warnings
