--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,7 +3,7 @@ Changelog
 
 7.1-dev - (unreleased)
 ----------------------
-* Bug fix: WIP fix create new version ajax method when the operation takes
+* Bug fix: fix create new version ajax method when the operation takes
   too much time.
   [ghicaale refs #20193]
 
