--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 7.1-dev - (unreleased)
 ----------------------
+* Change: GetVersions class no longer requires a request which isn't found
+  when class is called from plone.app.async
+  [ichimdav refs #19859]
 * Bug fix: fix create new version ajax method when the operation takes
   too much time.
   [ghicaale refs #20193]
