--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+7.2-dev - (unreleased)
+----------------------
+
 7.1 - (2014-07-15)
 ------------------
 * Bug fix: fixed permission for @@can_version, it is now set to zope2.View
