* Feature: added updateCreationDate BrowserView which will set the CreationDate to that of the EffectiveDate if the CreationDate is smaller than the EffectiveDate [ichim-david refs #21326]

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,15 +3,20 @@ Changelog
 
 7.3-dev - (unreleased)
 ----------------------
+* Feature: added updateCreationDate BrowserView which will set the CreationDate
+  to that of the EffectiveDate if the CreationDate is smaller than the
+  EffectiveDate
+  [ichim-david refs #21326]
+* Change: order of versions no longer takes into consideration that
+  effective_date needs to be older than the creation date, opting to sort
+  by effective_date if that is found on the object.
+  This reverts the logic change done in ticket 20827
+  [ichim-david refs #21326]
 * Bug fix: user must be able to create a new version with Add Portal
-  Content permission. Semantically creating new versions means adding new 
+  Content permission. Semantically creating new versions means adding new
   content to the site. This way users can create new versions of published
   content which it may be not editable anymore.
   [demarant refs #21369]
-* Change: order of versions no longer takes into consideration that effective_date
-  needs to be older than the creation date, opting to sort by effective_date if
-  that is found on the object. This reverts the logic change done in ticket 20827
-  [ichim-david refs #21326]
 
 7.2 - (2014-09-15)
 ------------------
