Updated version for eea.versions to 7.5-dev

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+7.5-dev - (unreleased)
+----------------------
+
 7.4 - (2014-11-20)
 ------------------
 * Bug fix: Display also archived (expired) versions within versioning viewlet
