--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 7.5-dev - (unreleased)
 ----------------------
+* Bug fix: Added browserlayer for viewlets, so don't throw error when
+  eea.versions is installed but not activated yet.
+  [szabozo0]
 
 7.4 - (2014-11-20)
 ------------------
