--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+7.6-dev - (unreleased)
+----------------------
+
 7.5 - (2014-12-23)
 ------------------
 * Feature: Ajax versioning is now checking if a version isn't already in
