--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,11 @@ Changelog
 
 7.6-dev - (unreleased)
 ----------------------
+* Change: Switched to curl in the jenkins build install script
+  [olimpiurob refs #22402]
+* Change: Changed fetch url for jenkins build install script to the install 
+  script from the main EEA CPB repository
+  [olimpiurob refs #22402]
 * Change: added eea.versions.older viewlet with logic that was previously
   within eea.versions.status viewlet about displaying older revisions
   [ichimdav refs #23017]
