--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+7.7.dev0 - (unreleased)
+-----------------------
+
 7.6 - (2015-03-17)
 ------------------
 * Change: Switched to curl in the jenkins build install script
