--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+7.8.dev0 - (unreleased)
+-----------------------
+
 7.7 - (2015-04-02)
 ------------------
 * Change: added missing commit for ticket 23017 which changes the portalMessage
