--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+7.9.dev0 - (unreleased)
+-----------------------
+
 7.8 - (2015-08-18)
 ------------------
 * Change: Auto-include zcml within plone context in order to make this package
