Show previous versions on all versions
* Change: fixed issue 2 - to have previous versions shown on all versions.
  [chiridra refs #28681]

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 7.9.dev0 - (unreleased)
 -----------------------
+* Change: fixed issue 2 - to have previous versions shown on all versions.
+  [chiridra refs #28681]
 * Change: removed js code that dealt with hiding of the older versions, this was
   a design implementation that isn't generic and was moved to another eea theme
   package
