Updated version for eea.versions to 9.1.dev0

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+9.1.dev0 - (unreleased)
+-----------------------
+
 9.0 - (2016-05-05)
 ------------------
 * Feature: added ability to create prefixes in order to have non random version
