Refs #72521 translated objects now get parent version id plus language flag ex: ART-1-de if prefix is used

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,10 @@ Changelog
 
 9.1.dev0 - (unreleased)
 -----------------------
+* Feature: translated objects from LinguaPlone get version plus language prefix
+  as version id if version object is defined in order to avoid adding a new 
+  prefixed object in case we have a new translation
+  [ichim-david refs #72521]
 * Feature: migration now sets version plus language prefix as version id
   if version object is defined in order to avoid adding a new prefixed object
   in case we have a new translation
