--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,10 @@ Changelog
 
 9.2.dev0 - (unreleased)
 -----------------------
+* Bug fix: reindex getVersionId when performing a revoke in order to ensure
+  that the version viewlet no longer takes into consideration the revoked
+  object as part of the previous versioning chain
+  [ichimdav refs #72875]
 
 9.1 - (2016-05-27)
 ------------------
