--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+9.3.dev0 - (unreleased)
+-----------------------
+
 9.2 - (2016-05-31)
 ------------------
 * Bug fix: reindex getVersionId when performing a revoke in order to ensure
