--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+9.5.dev0 - (unreleased)
+-----------------------
+
 9.4 - (2016-10-26)
 ------------------
 * Bug fix: Drop eea.rdfmarshaller hard dependency
