--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 9.5.dev0 - (unreleased)
 -----------------------
+* Feature: permalink macro is now generic, ds_resolveuid can be
+  called now from any context
+  [alecghica refs #76194]
 
 9.4 - (2016-10-26)
 ------------------
